Добавлена возможность фильтра УИКов

--- a/web/assets/user.css
+++ b/web/assets/user.css
@@ -533,3 +533,9 @@ body {
 .tab span {
     margin: auto;
 }
+
+#filter {
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
